Enhanced artist portrait placeholder with better information and styling

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="image-placeholder">
-                    <div class="image-icon">🎵</div>
-                    <p>Artist Portrait</p>
+                <div class="image-placeholder enhanced-placeholder">
+                    <div class="image-icon">🎼</div>
+                    <h4>Mania Rasstegaeva</h4>
+                    <p>Classical Soprano & Visual Artist</p>
+                    <small>Professional portrait coming soon</small>
                 </div>
             </div>
         </div>
