Add professional artist portrait - optimized and responsive design

--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="image-placeholder enhanced-placeholder">
-                    <div class="image-icon">🎼</div>
-                    <h4>Mania Rasstegaeva</h4>
-                    <p>Classical Soprano & Visual Artist</p>
-                    <small>Professional portrait coming soon</small>
-                </div>
+                <img src="images/mania-portrait.jpg" 
+                     alt="Mania Rasstegaeva - Classical Soprano, Visual Artist, and Philosopher"
+                     class="artist-portrait"
+                     loading="lazy">
             </div>
         </div>
         <div class="hero-scroll">
