Update management email to management@rasstegaeva.com

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <div class="contact-methods">
                         <div class="contact-method">
                             <h4>Professional Inquiries</h4>
-                            <p>management@maniarasstegaeva.com</p>
+                            <p>management@rasstegaeva.com</p>
                         </div>
                         <div class="contact-method">
                             <h4>Social Media</h4>
